--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="nav">☰</span>
       </header>
       <div class="discover">
-        <h1>Hi Afif</h1>
+        <h1>Hi Samantha</h1>
         <p>Welcome back to the workspace, we missed you!</p>
         <input type="text" placeholder="Search Task or Project..." />
       </div>
@@ -46,6 +46,35 @@
         </div>
       </div>
     </div>
-    <div class="tasklist-container">talklist</div>
+    <div class="tasklist-container">
+      <div class="task-header">
+        <div class="task-info">
+          <h2>Cyber Punk</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+            atque quod iure tenetur minima maiores!
+          </p>
+        </div>
+        <div class="task-member">
+          <div class="photo-member">
+            <img src="/assets/img/1.jpg" alt="photo member" />
+          </div>
+          <div class="photo-member">
+            <img src="/assets/img/2.jpg" alt="photo member" />
+          </div>
+          <div class="photo-member">
+            <img src="/assets/img/3.jpg" alt="photo member" />
+          </div>
+          <a href="#">⊕</a>
+        </div>
+      </div>
+      <div class="task-content">
+        <h3>Today</h3>
+        <div class="task" id="task"></div>
+      </div>
+      <a href="#" id="btn-add" class="btn">+</a>
+    </div>
+
+    <script src="./src/js/app.js"></script>
   </body>
 </html>
